--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
       <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
       <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
     </div>
-    <div class="text-center mt-16">
+    <div class="text-center mt-17">
       <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
     </div>
   </section>
 
   <!-- How It Works Section -->
-  <section class="py-4 px-6 max-w-5xl mx-auto text-center">
+  <section class="pt-6 pb-12 px-6 max-w-5xl mx-auto text-center">
     <h2 class="text-3xl font-extrabold text-[var(--brand-primary)] mb-8">How It Works</h2>
     <div class="grid md:grid-cols-3 gap-8">
       <div class="flex flex-col items-center">
