--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
       <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
       <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
     </div>
-    <div class="text-center mt-16">
-      <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
+    <div class="text-center" style="margin-top: 4.25rem;">
+  <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">
+    Explore More on the App
+  </a>
     </div>
   </section>
 
