--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     body {
       font-family: 'Comfortaa', sans-serif;
       background: var(--secondary-2);
-      scroll-behavior: smooth; /* ✅ تفعيل الانتقال السلس */
+      scroll-behavior: smooth;
     }
 
     h1, h2, h3 {
@@ -52,7 +52,7 @@
 
 <body id="top">
 
-  <!-- ✅ شريط علوي مع رابط يرجع للأعلى -->
+  <!-- شريط علوي مع رابط يرجع للأعلى -->
   <a href="#top">
     <header class="w-full bg-[var(--brand-primary)] fixed top-0 left-0 z-50 shadow-md">
       <div class="max-w-6xl mx-auto flex items-center justify-start px-4" style="height: 60px;">
@@ -69,15 +69,11 @@
     <a href="#download" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl shadow card-shadow font-semibold text-white" style="background: var(--accent-1);">
       <i class="fa-solid fa-download"></i> Download Now
     </a>
-    <div class="mt-10">
-      <img src="mockup.png" alt="App Mockup" class="max-w-xs mx-auto animate-[fadeIn_1s_ease-in-out]">
-    </div>
     <div class="mt-6 animate-bounce">
       <i class="fa-solid fa-angles-down text-[var(--brand-primary)] text-2xl"></i>
     </div>
   </section>
 
-  <!-- باقي الكود كما هو بدون تغيير -->
   <!-- Features Section -->
   <section class="py-12 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-extrabold text-center mb-10 text-[var(--brand-primary)]">Why Wearlyfit?</h2>
@@ -112,16 +108,14 @@
     </div>
   </section>
 
-  <!-- Gallery Section -->
+  <!-- Gallery Section (صور جديدة فقط) -->
   <section class="py-12 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-extrabold text-center mb-10 text-[var(--brand-primary)]">Discover the Marketplace</h2>
     <div class="grid md:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-4">
-      <img src="anna-evans-Vfy9pP8tkQg-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="tuananh-blue-3heVBZoJXGU-unsplash.webp" class="rounded-xl gallery-img card-shadow">
       <img src="pexels-kristina-chuprina-132621985-18935118.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="tuananh-blue-3heVBZoJXGU-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.webp" class="rounded-xl gallery-img card-shadow">
+      <img src="anna-evans-Vfy9pP8tkQg-unsplash.webp" class="rounded-xl gallery-img card-shadow">
     </div>
     <div class="text-center mt-[55px]">
       <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
@@ -177,4 +171,4 @@
   </footer>
 
 </body>
-</html>
+  </html>
