Final index.html

--- a/index.html
+++ b/index.html
@@ -62,18 +62,17 @@
   </a>
 
   <!-- Hero Section -->
-  <section class="h-auto flex flex-col justify-start items-center text-center px-6 pb-6" style="padding-top: 80px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
-    <h1 class="text-5xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
-    <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
-    <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
-    <a href="#download" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl shadow card-shadow font-semibold text-white" style="background: var(--accent-1);">
-      <i class="fa-solid fa-download"></i> Download Now
-    </a>
-    <div class="mt-6 animate-bounce">
-      <i class="fa-solid fa-angles-down text-[var(--brand-primary)] text-2xl"></i>
-    </div>
-  </section>
-
+<section class="h-auto flex flex-col justify-start items-center text-center px-6 pb-6" style="padding-top: 80px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
+  <h1 class="text-5xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
+  <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
+  <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
+  <div class="mb-4 animate-bounce">
+    <i class="fa-solid fa-angles-down text-[var(--brand-primary)] text-2xl"></i>
+  </div>
+  <a href="#download" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl shadow card-shadow font-semibold text-white" style="background: var(--accent-1);">
+    <i class="fa-solid fa-download"></i> Download Now
+  </a>
+</section>
   <!-- Features Section -->
   <section class="py-12 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-extrabold text-center mb-10 text-[var(--brand-primary)]">Why Wearlyfit?</h2>
