Final Update for index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <h2 class="text-3xl font-extrabold mb-6">Start Your Style Journey Today</h2>
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <a href="#" class="bg-[var(--accent-2)] text-white px-6 py-3 rounded-xl flex items-center gap-2 card-shadow"><i class="fa-brands fa-apple"></i> Download on App Store</a>
-      <a href="#" class="bg-[var(--accent-2)] text-white px-6 py-3 rounded-xl flex items-center gap-2 card-shadow"><i class="fa-brands fa-google-play"></i> Get it on Google Play</a>
+      <a href="#" class="bg-[var(--accent-2)] text-white px-6 py-3 rounded-xl flex items-center gap-2 card-shadow"><i class="fa-brands fa-google-play"></i> Download on Play Store</a>
     </div>
     <p class="mt-4 opacity-80">Join thousands of fashion lovers in Algeria.</p>
   </section>
